--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -26,6 +26,8 @@ h2 {
 }
 /* ================= */
 
+/* === GENERAL STYLING === */
+
 .header {
   padding: 4rem;
   background-color: lightcyan;
@@ -42,6 +44,29 @@ h2 {
   align-items: center;
 }
 
+.container {
+
+  background-color: #fcc9c9;
+  padding: 4rem;
+  display: flex;
+}
+
+.alert-danger {
+  border-radius: 0.5rem;
+  padding: 1rem 3rem;
+  background-color: rgba(255, 89, 89, 0.514);
+  color: rgb(99, 33, 33);
+}
+
+.alert-info {
+  border-radius: 0.5rem;
+  padding: 1rem 3rem;
+  background-color: rgba(89, 255, 97, 0.514);
+  color: green;
+}
+
+/* ================= */
+
 /* === NAVBAR === */
 
 .navbar {
@@ -50,7 +75,7 @@ h2 {
 
   .navbar-item {
     padding: 1rem;
-    
+
     .navbar-link {
       color: white;
     }
@@ -61,7 +86,7 @@ h2 {
   }
 }
 
-/* === END STYLE ===*/
+/* ================= */
 
 /* === Sign up page ===*/
 
@@ -105,16 +130,53 @@ form {
   }
 }
 
-.alert-danger {
-  border-radius: 0.5rem;
-  padding: 1rem 3rem;
-  background-color: rgba(255, 89, 89, 0.514);
-  color: rgb(99, 33, 33);
+/* ================= */
+
+/* === Admin Dashboard ===*/
+
+.admin-create {
+  width: 50%;
+
+  .admin-header {
+    font-weight: bold;
+    width: 50%;
+    font-size: 2rem;
+  }
+
+  .list-group {
+    width: 30%;
+    .list-group-item {
+      text-align: center;
+      background-color: lightcyan;
+      border-radius: 0.5rem;
+      font-size: 0.8rem;
+      padding: 0.3rem;
+      margin: 0.5rem 0;
+
+      
+    }
+  }
 }
 
-.alert-info {
-  border-radius: 0.5rem;
-  padding: 1rem 3rem;
-  background-color: rgba(89, 255, 97, 0.514);
-  color: green;
+.admin-info {
+  width: 50%;
+
+  .admin-header {
+    font-weight: bold;
+    width: 50%;
+    font-size: 2rem;
+  }
+
+  .list-group {
+    width: 50%;
+
+    .list-group-item {
+      font-size: 0.8rem;
+      margin: 0.5rem 0;
+
+      span{
+        font-weight: bold;
+      }
+    }
+  }
 }
