--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -24,8 +24,12 @@ ul {
 h2 {
   margin: 0;
 }
-/* ================= */
 
+/* ================= */
+//
+//
+//
+//
 /* === GENERAL STYLING === */
 
 .header {
@@ -33,40 +37,43 @@ h2 {
   background-color: lightcyan;
 
   .title {
-    font-size: 2.5rem;
+    font-size: 4rem;
   }
 }
 
 .section {
   padding: 4rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.container {
-
   background-color: #fcc9c9;
-  padding: 4rem;
-  display: flex;
 }
 
 .alert-danger {
+  text-align: center;
   border-radius: 0.5rem;
   padding: 1rem 3rem;
   background-color: rgba(255, 89, 89, 0.514);
   color: rgb(99, 33, 33);
+  span {
+    font-weight: bold;
+  }
 }
 
 .alert-info {
+  text-align: center;
   border-radius: 0.5rem;
   padding: 1rem 3rem;
   background-color: rgba(89, 255, 97, 0.514);
   color: green;
+
+  span {
+    font-weight: bold;
+  }
 }
 
 /* ================= */
-
+//
+//
+//
+//
 /* === NAVBAR === */
 
 .navbar {
@@ -87,8 +94,11 @@ h2 {
 }
 
 /* ================= */
-
-/* === Sign up page ===*/
+//
+//
+//
+//
+/* === SIGNUP PAGE ===*/
 
 form {
   width: 100%;
@@ -131,52 +141,125 @@ form {
 }
 
 /* ================= */
+//
+//
+//
+//
+/* === ADMIN DASHBOARD ===*/
 
-/* === Admin Dashboard ===*/
+.container-admin-dashboard {
+  display: flex;
 
-.admin-create {
-  width: 50%;
-
-  .admin-header {
-    font-weight: bold;
+  .admin-create {
     width: 50%;
-    font-size: 2rem;
-  }
 
-  .list-group {
-    width: 30%;
-    .list-group-item {
-      text-align: center;
-      background-color: lightcyan;
-      border-radius: 0.5rem;
-      font-size: 0.8rem;
-      padding: 0.3rem;
-      margin: 0.5rem 0;
+    .admin-header {
+      font-weight: bold;
+      font-size: 2rem;
+    }
 
-      
+    .list-group {
+      width: 30%;
+      .list-group-item {
+        text-align: center;
+        background-color: lightcyan;
+        border-radius: 0.5rem;
+        font-size: 0.8rem;
+        padding: 0.3rem;
+        margin: 0.5rem 0;
+      }
     }
   }
-}
 
-.admin-info {
-  width: 50%;
-
-  .admin-header {
-    font-weight: bold;
-    width: 50%;
-    font-size: 2rem;
-  }
-
-  .list-group {
+  .admin-info {
     width: 50%;
 
-    .list-group-item {
-      font-size: 0.8rem;
-      margin: 0.5rem 0;
+    .admin-header {
+      font-weight: bold;
+      font-size: 2rem;
+    }
 
-      span{
-        font-weight: bold;
+    .list-group {
+      .list-group-item {
+        font-size: 0.8rem;
+        margin: 0.5rem 0;
+
+        span {
+          font-weight: bold;
+        }
       }
     }
   }
 }
+
+/* ================= */
+//
+//
+//
+//
+/* === USER DASHBOARD ===*/
+
+.container-user-dashboard {
+  display: flex;
+
+  .user-links {
+    width: 50%;
+
+    .user-header {
+      font-weight: bold;
+      font-size: 2rem;
+    }
+
+    .list-group {
+      .list-group-item {
+        font-size: 0.8rem;
+        padding: 0.3rem;
+
+        span {
+          font-weight: bold;
+        }
+      }
+    }
+  }
+
+  .user-info {
+    width: 50%;
+
+    .user-header {
+      font-weight: bold;
+      font-size: 2rem;
+    }
+
+    .list-group {
+      .list-group-item {
+        font-size: 0.8rem;
+        margin: 0.5rem 0;
+
+        span {
+          font-weight: bold;
+        }
+      }
+    }
+  }
+}
+
+.purchasedHistory {
+  .history-header {
+    font-weight: bold;
+    font-size: 2rem;
+  }
+}
+
+/* ================= */
+//
+//
+//
+/* === CREATE CATEGORY ===*/
+
+.container-create-category {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* ================= */
