--- a/frontend/src/style/main.css
+++ b/frontend/src/style/main.css
@@ -255,4 +255,33 @@ form .button {
 }
 
 /* ================= */
+/* === CREATE PRODUCT ===*/
+.container-create-product {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container-create-product .header-div {
+  width: 50%;
+}
+
+.container-create-product .header-div .header-product {
+  font-weight: bold;
+  margin-bottom: .8rem;
+  font-size: 1.5rem;
+}
+
+.container-create-product .first-label {
+  padding: 0;
+}
+
+/* ================= */
 /*# sourceMappingURL=main.css.map */
