--- a/frontend/src/style/main.scss
+++ b/frontend/src/style/main.scss
@@ -41,9 +41,55 @@ h2 {
   }
 }
 
+.header {
+  width: 30wh;
+  height: 30vh;
+  color: #fff;
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  -webkit-animation: Gradient 15s ease infinite;
+  -moz-animation: Gradient 15s ease infinite;
+  animation: Gradient 15s ease infinite;
+}
+
+@-webkit-keyframes Gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@-moz-keyframes Gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes Gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
 .section {
   padding: 4rem;
-  background-color: #fcc9c9;
 }
 
 .alert-danger {
@@ -57,7 +103,7 @@ h2 {
   }
 }
 
-.alert-info {
+.alert-success {
   text-align: center;
   border-radius: 0.5rem;
   padding: 1rem 3rem;
@@ -69,6 +115,35 @@ h2 {
   }
 }
 
+.alert-info {
+  text-align: center;
+  border-radius: 0.5rem;
+  padding: 1rem 3rem;
+  background-color: rgba(89, 255, 97, 0.514);
+  color: lightblue;
+
+  span {
+    font-weight: bold;
+  }
+}
+
+.button {
+  border: 0;
+  background-color: lightgrey;
+  padding: 0.5rem 1rem;
+  margin: 0 0.7rem 0 0;
+  width: auto;
+  border-radius: 0.5rem;
+  font-weight: bold;
+}
+
+.button-green{
+  background-color: rgba(89, 255, 97, 0.514);
+}
+
+.button-blue{
+  background-color: rgba(89, 216, 255, 0.514);
+}
 /* ================= */
 //
 //
@@ -127,16 +202,6 @@ form {
       text-decoration: none;
       border-bottom: 1px solid black;
     }
-  }
-
-  .button {
-    border: 0;
-    background-color: black;
-    padding: 0.5rem 1rem;
-    margin: 1.5rem 0;
-    width: auto;
-    border-radius: 0.5rem;
-    color: white;
   }
 }
 
@@ -264,7 +329,6 @@ form {
 
 /* ================= */
 
-
 /* === CREATE PRODUCT ===*/
 
 .container-create-product {
@@ -272,21 +336,88 @@ form {
   flex-direction: column;
   align-items: center;
 
-  .header-div{
+  .header-div {
     width: 50%;
 
-    .header-product{
+    .header-product {
       font-weight: bold;
-      margin-bottom: .8rem;
+      margin-bottom: 0.8rem;
       font-size: 1.5rem;
     }
   }
 
-
-
-  .first-label{
+  .first-label {
     padding: 0;
   }
+}
+
+/* ================= */
+
+/* === HOME PRODUCT SECTIONS ===*/
+
+.home-section {
+  padding-bottom: 4rem;
+
+  .home-header {
+    font-size: 3rem;
+    padding-bottom: 1rem;
+  }
+}
+
+/* ================= */
+
+/* === PRODUCT CARD ===*/
+
+.card {
+  padding: 1.5rem 1.5rem 1.5rem 0;
+  width: 100%;
+  display: flex;
+  border-bottom: 1px solid lightgrey;
+
+  .product-image {
+    height: 15rem;
+    width: 15rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .card-body {
+    padding-left: 2rem;
+    color: rgb(83, 83, 83);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
+    .card-header {
+      font-weight: 500;
+      color: black;
+      font-size: 1.3rem;
+    }
+    .card-inside-body {
+      margin: 1rem 0;
+
+      p {
+        margin: 0;
+      }
+
+      .card-description {
+      }
+      .card-price {
+        color: orange;
+      }
+    }
+  }
+}
+
+/* ================= */
+
+/* === CARDS IN HOMEPAGE ===*/
+
+.container-cards {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 /* ================= */
