--- a/frontend/src/style/main.css
+++ b/frontend/src/style/main.css
@@ -416,4 +416,21 @@ form .form-group .form-control {
 }
 
 /* ================= */
+/* === CARDS IN HOMEPAGE ===*/
+.container-shop {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.container-shop .filter-section {
+  width: 20%;
+}
+
+.container-shop .products-section {
+  width: 80%;
+}
+
+/* ================= */
 /*# sourceMappingURL=main.css.map */
