--- a/frontend/src/style/main.css
+++ b/frontend/src/style/main.css
@@ -9,6 +9,7 @@ body {
   margin: 0;
   font-family: zeitung, sans-serif;
   font-size: 16px;
+  color: #535353;
 }
 
 a {
@@ -338,11 +339,18 @@ form .form-group .form-control {
 
 /* ================= */
 /* === HOME PRODUCT SECTIONS ===*/
-.home-section {
-  padding-bottom: 4rem;
+.container-home {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
-.home-section .home-header {
+.container-home .home-section {
+  padding-bottom: 4rem;
+  width: 50%;
+}
+
+.container-home .home-section .home-header {
   font-size: 3rem;
   padding-bottom: 1rem;
 }
@@ -416,7 +424,7 @@ form .form-group .form-control {
 }
 
 /* ================= */
-/* === CARDS IN HOMEPAGE ===*/
+/* === SHOP PAGE ===*/
 .container-shop {
   width: 100%;
   display: -webkit-box;
@@ -426,10 +434,64 @@ form .form-group .form-control {
 
 .container-shop .filter-section {
   width: 20%;
+  border-right: 1px solid lightgrey;
+  margin-right: 2.5rem;
+}
+
+.container-shop .filter-section .filter-header {
+  font-weight: bold;
+  font-size: 1.2rem;
+  color: black;
 }
 
 .container-shop .products-section {
   width: 80%;
+}
+
+/* ================= */
+/* === CHECK COMPONENT ===*/
+.checkbox-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.checkbox-list .checkbox {
+  margin: 0.5rem;
+  font-size: 2rem;
+}
+
+.checkbox-list .checkbox-label {
+  margin-left: .5rem;
+  font-size: .9rem;
+}
+
+/* ================= */
+/* === SEARCH COMPONENT ===*/
+.search-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 1px solid lightgrey;
+  padding: 1rem;
+  background-color: lightgrey;
+}
+
+.search-container .select-component {
+  font-size: 1rem;
+  border: 0;
+}
+
+.search-container .form-search {
+  font-size: 1rem;
+  border: 0;
+  border-bottom: 1px solid lightgrey;
 }
 
 /* ================= */
